--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sos1920-l04",
+  "name": "sos1920-l05",
   "version": "0.0.0",
   "description": "this is the result of lab04",
   "main": "index.js",
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/manubarreram18/sos1920-labs#readme",
   "dependencies": {
-    "cool-ascii-faces": "^1.3.4"
-  }
+    "cool-ascii-faces": "^1.3.4",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {}
 }
