--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/manubarreram18/sos1920-labs#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cool-ascii-faces": "^1.3.4",
     "express": "^4.17.1"
   },
